# opengl

./: CMakeLists.txt  README.md
link/glad/include/glad/: glad.h
link/glad/src/: glad.c
res/shader/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.cpp  shader.h  stb_image.cpp  texture_manager.cpp  texture_manager.h
